[package]
name = "currency-exchange-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
autoagents = { path = "../../crates/autoagents", features = ["openai", "anthropic", "ollama"] }
autoagents-derive = { path = "../../crates/derive" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
ta = "0.5"  # Technical analysis library
statrs = "0.16"  # Statistical functions